[B]1.0.6:[/B]
- added zideo.nl
- stagevu - do not fail if movie was removed
- videobb - proper resolving
[B]1.0.5:[/B]
- added novamov, youtube, trivial - special does nothing
- fixed megavideo and videozer 
[B]1.0.4:[/B]
- added megavideo, videozer resolvers
- fixed zkouknito
[B]1.0.3:[/B]
- added other resolvers
- added simple debug logging
- all resovlers renamed not to collide with other 3rd party on Camelot
[B]1.0.1:[/B]
 - added putlocker resolver
[B]1.0.0:[/B]
Initial version