@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.module.stream.resolver"
        name="stream resolver"
-       version="1.0.6"
-       provider-name="lzoubek">
+       version="1.0.7"
+       provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
+    <import addon="script.module.simplejson" version="2.0.10" />
   </requires>
   <extension point="xbmc.python.module"
              library="lib" />
   <extension point="xbmc.addon.metadata">
-    <summary>xbmc-czech-repo plugins common python modules mainly for resolving stream URLs</summary>
-    <description>Common python modules pack that is used by xbmc-czech-repo plugins</description>
+    <summary>xbmc-doplnky plugins common python modules mainly for resolving stream URLs</summary>
+    <description>Common python modules pack that is used by xbmc-doplnky plugins</description>
     <license>GNU GPL</license>
     <platform>all</platform>
   </extension>
